# CalcGTest

./: CMakeLists.txt  MockHistoryTests.cpp  MockHistoryTests.h  OperationsTests.cpp  OperationsTests.h  README.md  SimpleCalculator.cpp  SimpleCalculator.h  main.cpp
